MMBAPP-分类页面功能完成

--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>慢慢买</title>
+    <title>慢慢买 - 首页</title>
     <!-- 引入样式统一化 CSS 文件 -->
     <link rel="stylesheet" href="./css/common/normalize.css">
     <!-- 引入网站初始化 CSS 文件 -->
     <link rel="stylesheet" href="./css/common/base.css">
+    <!-- 引入网站基础 CSS 文件 -->
+    <link rel="stylesheet" href="./css/common/core.css">
     <!-- 引入首页 CSS 文件 -->
     <link rel="stylesheet" href="./css/index.css">
     <!-- 引入 flexible JS 文件 -->
