--- a/productList.html
+++ b/productList.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>慢慢买 - 首页</title>
+    <title>慢慢买 - 商品列表</title>
     <!-- 引入样式统一化 CSS 文件 -->
     <link rel="stylesheet" href="./css/common/normalize.css">
     <!-- 引入网站初始化 CSS 文件 -->
     <link rel="stylesheet" href="./css/common/base.css">
     <!-- 引入网站基础 CSS 文件 -->
     <link rel="stylesheet" href="./css/common/core.css">
-    <!-- 引入首页 CSS 文件 -->
-    <link rel="stylesheet" href="./css/index.css">
+    <!-- 引入 商品列表 CSS 文件 -->
+    <link rel="stylesheet" href="./css/productList.css">
     <!-- 引入 flexible JS 文件 -->
     <script src="./lib/flexible/flexible.min.js"></script>
 </head>
@@ -32,34 +32,28 @@
             <input class="search_input" type="text" placeholder="请输入你想比价的商品">
             <button class="search_btn">搜索</button>
         </div>
-        <!-- 慢慢买菜单栏 -->
-        <div class="mmb_menus clearfix">
-            <!-- artTemplate 区域 -->
-        </div>
-        <!-- 折扣推荐区域 -->
-        <div class="mmb_recommend">
-            <div class="recommend_title">
-                <h6>超值折扣推荐</h6>
-                <a href="#"></a>
+        <!-- 慢慢买导航菜单栏 -->
+        <div class="mmb_nav_menu">
+            <div class="mmb_nav_breadcrumbs">
+                <!-- artTemplate 区域 -->
             </div>
-            <div class="recommend_list">
-                <ul class="recommend_list_ul">
-                    <!-- artTemplate 区域 -->
-                </ul>
-            </div>
-            <div class="recommend_more">
-                <a href="#">
-                    <span>更多优惠信息 >></span>
-                    <i></i>
-                </a>
+            <div class="mmb_nav_screen">
+                <button>筛选</button>
             </div>
         </div>
-        <!-- 品牌排行区域 -->
-        <div class="mmb_rank">
-            <div class="rank_title">
-                <h6>品牌排行</h6>
-                <a href="#"></a>
-            </div>
+        <!-- 慢慢买商品列表 -->
+        <div class="mmb_commodity_lists">
+            <ul class="commodity_list_ul">
+                <!-- artTemplate 区域 -->
+            </ul>
+        </div>
+        <!-- 慢慢买商品列表分页跳转 -->
+        <div class="mmb_commodity_lists_page clearfix">
+            <button class="prev fl">上一页</button>
+            <select class="page_select" name="page_select" id="page_select">
+                <!-- artTemplate 区域 -->
+            </select>
+            <button class="next fr">下一页</button>
         </div>
         <!-- 慢慢买网页底部 -->
         <div class="mmb_footer">
@@ -86,40 +80,34 @@
 
 
 
-    <!-- 菜单栏模板 -->
-    <script type="text/html" id="menu_items">
-        {{each result v i}}
-        <!-- 根据 indexmenuId 的值是否为 7 判断是否是更多菜单 -->
-        <div class="menu_item fl {{v.indexmenuId == 7 ? "more" : ""}}">
-            <a class="menu_item_link" href="{{v.titlehref}}">
-                <!-- 因为保护措施 artTemplate 会转义 HTML 代码为字符串输出，如果不需要转义时只需要在前面加个 @ 号（以前是 # 号） -->
-                {{@v.img}}
-                <h6>{{v.name}}</h6>
-            </a>
-        </div>
-        {{/each}}
+    <!-- 导航菜单栏模板 -->
+    <script type="text/html" id="nav_breadcrumb">
+        <a href="index.html">首页&nbsp;>&nbsp;</a>
+        <a href="category.html">全部分类&nbsp;>&nbsp;</a>
+        <a class="last" href="#">{{result[0].category}}&nbsp;>&nbsp;</a>
     </script>
 
-    <!-- 折扣推荐区域模板 -->
-    <script type="text/html" id="recommend_lists">
+    <!-- 商品列表模板 -->
+    <script type="text/html" id="commodity_list">
         {{each result v i}}
         <li>
-            <a class="clearfix" href="#">
+            <a class="clearfix" href="productdetail.html?productId={{v.productId}}&brandName={{v.brandName}}&category={{category}}">
                 <div class="list_img fl">
-                    {{@v.productImgLg}}
+                    {{@v.productImg}}
                 </div>
                 <div class="list_info fr">
                     <div class="list_info_title txt-cut">
-                        <span class="list_info_title_name">{{v.productName}}</span>
-                        <span class="list_info_title_price">{{v.productPinkage}}</span>
+                        <span class="commodity_name">{{v.productName}}</span>
+                    </div>
+                    <div class="list_info_price">
+                        <span class="commodity_price">{{v.productPrice}}</span>
                     </div>
                     <div class="list_info_other clearfix">
-                        <span class="list_info_source fl">
-                            {{v.productFrom}} | {{v.productTime}}
+                        <span class="list_info_business fl">
+                            {{v.productQuote}}
                         </span>
-                        <span class="list_info_num fr">
-                            <i></i>
-                            {{v.comcount}}
+                        <span class="list_info_comment fl">
+                            {{v.productCom}}
                         </span>
                     </div>
                 </div>
@@ -128,11 +116,22 @@
         {{/each}}
     </script>
 
+    <!-- 分页跳转下拉菜单模板 -->
+    <script type="text/html" id="page_list">
+        {{each data v i}}
+        {{if i == v.currentPageNum-1}}
+        <option selected value="{{i + 1}}">{{i + 1}}&nbsp;/&nbsp;{{v.totlePage}}</option>
+        {{else}}
+        <option value="{{i + 1}}">{{i + 1}}&nbsp;/&nbsp;{{v.totlePage}}</option>
+        {{/if}}
+        {{/each}}
+    </script>
+
     <!-- 引入 JQuery 文件 -->
     <script src="./lib/jquery/jquery-1.12.4.min.js"></script>
     <!-- 引入模板引擎 JS 文件 -->
     <script src="./lib/artTemplate/template-web.js"></script>
-    <!-- 引入首页 JS 文件 -->
-    <script src="./js/index.js"></script>
+    <!-- 引入 商品列表 JS 文件 -->
+    <script src="./js/productList.js"></script>
 </body>
 </html>
