MMBAPP-商品详情页面功能完成

--- a/category.html
+++ b/category.html
@@ -32,7 +32,7 @@
             <input class="search_input" type="text" placeholder="请输入你想比价的商品">
             <button class="search_btn">搜索</button>
         </div>
-        <!-- 慢慢买分类菜单 -->
+        <!-- 分类菜单区域 -->
         <div class="mmb_category">
             <div class="mmb_category_div">
                 <ul class="mmb_category_container">
@@ -90,6 +90,9 @@
     <script src="./lib/jquery/jquery-1.12.4.min.js"></script>
     <!-- 引入模板引擎 JS 文件 -->
     <script src="./lib/artTemplate/template-web.js"></script>
+    
+    <!-- 调用功能模块 回到顶部 功能 -->
+    <script src="./js/tools/tools-goBackTop.js"></script>
     <!-- 引入 分类页面 JS 文件 -->
     <script src="./js/category.js"></script>
 </body>
