--- a/index.html
+++ b/index.html
@@ -132,6 +132,9 @@
     <script src="./lib/jquery/jquery-1.12.4.min.js"></script>
     <!-- 引入模板引擎 JS 文件 -->
     <script src="./lib/artTemplate/template-web.js"></script>
+    
+    <!-- 调用功能模块 回到顶部 功能 -->
+    <script src="./js/tools/tools-goBackTop.js"></script>
     <!-- 引入首页 JS 文件 -->
     <script src="./js/index.js"></script>
 </body>
