--- a/productList.html
+++ b/productList.html
@@ -32,7 +32,7 @@
             <input class="search_input" type="text" placeholder="请输入你想比价的商品">
             <button class="search_btn">搜索</button>
         </div>
-        <!-- 慢慢买导航菜单栏 -->
+        <!-- 商品列表导航菜单栏 -->
         <div class="mmb_nav_menu">
             <div class="mmb_nav_breadcrumbs">
                 <!-- artTemplate 区域 -->
@@ -41,13 +41,13 @@
                 <button>筛选</button>
             </div>
         </div>
-        <!-- 慢慢买商品列表 -->
+        <!-- 商品列表区域 -->
         <div class="mmb_commodity_lists">
             <ul class="commodity_list_ul">
                 <!-- artTemplate 区域 -->
             </ul>
         </div>
-        <!-- 慢慢买商品列表分页跳转 -->
+        <!-- 商品列表分页跳转 -->
         <div class="mmb_commodity_lists_page clearfix">
             <button class="prev fl">上一页</button>
             <select class="page_select" name="page_select" id="page_select">
@@ -131,6 +131,9 @@
     <script src="./lib/jquery/jquery-1.12.4.min.js"></script>
     <!-- 引入模板引擎 JS 文件 -->
     <script src="./lib/artTemplate/template-web.js"></script>
+    
+    <!-- 调用功能模块 回到顶部 功能 -->
+    <script src="./js/tools/tools-goBackTop.js"></script>
     <!-- 引入 商品列表 JS 文件 -->
     <script src="./js/productList.js"></script>
 </body>
