MMBAPP-省钱折扣页面功能完成

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <li>
             <a class="clearfix" href="#">
                 <div class="list_img fl">
-                    {{@v.productImgLg}}
+                    {{@v.productImgSm}}
                 </div>
                 <div class="list_info fr">
                     <div class="list_info_title txt-cut">
